--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.18.0",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "swiper": "^11.0.3"
   },
